k3s/apps/services/code-server/ingress.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  labels:
    app: code-server
  name: code-server
  namespace: services
  annotations:
    kubernetes.io/ingress.class: traefik
    kubernetes.io/ingress.allow-http: "false"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: services-authelia-auth@kubernetescrd,kube-system-traefik-errors@kubernetescrd,services-rate-limit@kubernetescrd,services-authelia-headers@kubernetescrd
    external-dns.alpha.kubernetes.io/hostname: codeserver.technolab.cloud
    external-dns.alpha.kubernetes.io/target: technolab.cloud
spec:
  rules:
  - host: codeserver.technolab.cloud
    http:
      paths:
      - path:
        backend:
          serviceName: code-server
          servicePort: 8443
  tls:
  - hosts:
    - codeserver.technolab.cloud
    secretName: services-technolab-cloudflare-org-tls
